refactor(tracing): 优化 OpenTelemetry 拦截器和拓扑服务代码格式与实现细节
- 统一并优化了消息链路相关数据模型的代码格式和注释排版
- 精简并规范了 StreamMQTopologyService 中拓扑和链路构建方法的代码结构
- 优化了生产者和消费者拦截器中的异常处理与代码排版，确保追踪功能稳定可靠
- 调整包和类注释格式，提升代码文档一致性与可读性
- 引入 Java 8 及以上特性简化集合处理逻辑，提高代码简洁度和性能
- 校正注释中的空格和换行，确保 JavaDoc 格式规范符合团队标准